@@ -13,6 +13,7 @@ base-installer (1.17) UNRELEASED; urgency=low
       on errors.
     - kernel/tests/runtests and 'make test' in kernel/ exit non-zero on
       errors.
+    - Run test suite automatically on package build.
   * Matt Kraai
     - Fix the spelling of "file system".
   * Steve Langasek
